syntax="proto3";
package bootstrap;

// bootstrap broker
service bootstrap_broker{

  // enroll node info.
  rpc set_seed_node(Node) returns (Reply) {}

  // return seed node list
  rpc get_seed_node_list(Node) returns (SeedNodeList) {}

}

message Node {
  string nodeId = 1;
  string address = 2;
  int32 port = 3;
}

message SeedNodeList {
  repeated Node nodes = 1;
}

message Reply {
  bool status = 1;
  string message = 2;
}

message Null {
}
